[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-merkle-root-bench"
version = "1.9.19"
repository = "https://github.com/1111-1993/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
publish = false

[dependencies]
clap = "2.33.1"
log = "0.4.14"
solana-logger = { path = "../logger", version = "=1.9.19" }
solana-measure = { path = "../measure", version = "=1.9.19" }
solana-runtime = { path = "../runtime", version = "=1.9.19" }
solana-sdk = { path = "../sdk", version = "=1.9.19" }
solana-version = { path = "../version", version = "=1.9.19" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
