[package]
authors = ["Solana Maintainers <maintainers@solana.com>"]
description = "Blockchain, Rebuilt for Scale"
edition = "2021"
homepage = "https://solana.com/"
license = "Apache-2.0"
name = "proto"
publish = false
repository = "https://github.com/1111-1993/solana"
version = "1.9.19"

[workspace]

[dependencies]
tonic-build = "0.7.0"
